# syntagmax

./: .flake8  .gitignore  AGENTS.md  CHANGELOG.md  GEMINI.md  LICENSE  README.md  babel.cfg  benchmark.py  benchmark_id_schema.py  compare_perf.py  pyproject.toml  skills-lock.json  test_perf.py
.agent/rules/: benchmarks.md  tests.md
.gemini/commands/: sc.code.review.md  sc.critique.spec.md
.github/workflows/: build-msi.yml  openwiki-update.yml  publish.yml
.jules/: bolt.md
.kiro/prompts/: sc.critique.spec.md  sc.document.md  sc.split.tasks.md  write-bugreport.md
.pin/: benchmarks.md  ruff.md  specs-location.md  tests.md  versioning.md  workflow.md
assets/notepadplusplus/: syntagmax.xml
benchmarks/: README.md  benchmark.py  benchmark_analyse.py  compare_perf.py  test_perf.py
docs/: INTERNALS.md  internal.md  technical-summary.md
docs/brainstorms/: split-headings.md
docs/bugreports/: 2026-07-07-bug-hunter-report.md  2026-07-09-bug-hunter-scan.md  2026-07-15-bug-hunt.md  2026-07-16 Change report issues.md
docs/codereviews/: change-report.md  jules-fixes.md  localization.md
docs/critiques/: attribute-presence.critique.md  bulk-attribute-manipulation-critique.md  change-baseline.critique.md  change-report-rendering-fixes.critique.md  change-report-restructure.critique.md  change-report.critique.md  change-summary-report.critique.md  content-files.critique.md  docx-templates.critique.md  driver-element-exclusion.critique.md  element-exclusion-modes.critique.md  export-tracing.critique.md  heading-level-hierarchy.critique.md  image-aware-publishing.critique.md  images-in-change-report.critique.md  localization.critique.md  markers-renumber.critique.md  numbered-text-block.critique.md  obsidian-attach-path.critique.md  obsidian-marked-fragments-critique.md  plugin-system-critique.md  publish-toml-support.critique.md  refactor-large-modules.critique.md  simple-req-or-block-term.critique.md  split-headings.critique.md  strict-line-breaks.critique.md  table-spacer.critique.md
docs/reference/: CLI.md  configuration.md  executive-summary.md  internal.md  obsidian.md  paths.md  plugins.md  publishing.md  technical-summary.md
docs/schemas/: config.schema.json  publish-config.schema.json
docs/seed/: Change Report Specification.md  basic-baselining.md  bug-docx-images.md  change-summary-report.md  content-files.md  default-pandoc-template.md  split-headings.md  (+11 more)
openwiki/: .last-update.json  architecture.md  domain.md  operations.md  quickstart.md  testing.md
scripts/: TestWith-Safir.ps1  test-with-safir.py  update-translations.ps1  update-translations.py
test/: test_markdown.py
tests/: benchmark_publish.py  test_ai_providers.py  test_artifact_validation.py  test_attribute_presence.py  test_change_baseline.py  test_change_report.py  test_change_summary.py  test_ci_commands.py  test_custom_boolean.py  test_dag.py  test_edit_attrs.py  test_empty_line_terminator.py  test_enum_multiple.py  test_exclude_tags.py  test_extractors.py  test_git_revisions.py  test_git_utils.py  test_heading_blocks.py  test_heading_split.py  test_hyphen_support.py  test_i18n.py  test_id_validation.py  test_impact.py  test_independent_atype_marker.py  test_init.py  test_init_cmd.py  test_ipynb_extractor.py  test_marked_fragments.py  test_marker_renumber.py  test_mcp.py  test_metamodel.py  test_metamodel_pids.py  test_metamodel_schema_validation.py  test_multiple_attributes_e2e.py  test_multiple_records_same_driver.py  test_multiplicity_validation.py  test_obsidian_attachment_path.py  test_pandoc.py  test_plugin.py  test_publish.py  (+11 more)
(+266 files in other folders)
