[project]
name = "syntagmax"
version = "0.0.1"
description = "Git-Based Requirements Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "gitpython>=3.1.44",
    "mcp[cli]>=1.16.0",
    "pyparsing>=3.2.3",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]


[project.scripts]
stmx = "syntagmax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syntagmax"]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
]
