[project]
name = "syntagmax"
version = "0.0.1"
description = "Git-Based Requirements Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.14",
    "click>=8.1.8",
    "jinja2>=3.1",
    "gitpython>=3.1.44",
    "mcp[cli]>=1.16.0",
    "polars>=1.36.1",
    "pydantic>=2.11.10",
    "pyparsing>=3.2.3",
    "python-benedict[parse,yaml,toml]>=0.35.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34.0",
]

[project.scripts]
stmx = "syntagmax.cli:main"
stmx-mcp = "syntagmax.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syntagmax"]

[dependency-groups]
dev = [
    "boto3>=1.42.56",
    "duct>=1.0.1",
    "flake8>=7.1.2",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
