[project]
name = "syntagmax"
version = "2026.7.6"
description = "Git-Based Requirements Management System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Flyvercity", email = "info@flyver.city" },
]
keywords = ["requirements", "requirements-engineering", "traceability", "git", "engineering", "requirements-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "babel>=2.14",
    "click>=8.1.8",
    "jinja2>=3.1",
    "gitpython>=3.1.44",
    "mcp[cli]>=1.16.0",
    "uvicorn>=0.30.0",
    "polars>=1.36.1",
    "pydantic>=2.11.10",
    "python-benedict[parse,yaml,toml]>=0.35.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "lark>=1.3.1",
    "requests>=2.34.2",
]

[project.urls]
Homepage = "https://github.com/flyvercity/syntagmax"
Repository = "https://github.com/flyvercity/syntagmax"
Issues = "https://github.com/flyvercity/syntagmax/issues"
Changelog = "https://github.com/flyvercity/syntagmax/blob/main/CHANGELOG.md"

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34.0",
]

[project.scripts]
syntagmax = "syntagmax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/syntagmax"]

[tool.ruff]
line-length = 160
target-version = "py313"
exclude = ["example/"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "W"]

[dependency-groups]
dev = [
    "boto3>=1.42.56",
    "duct>=1.0.1",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
    "ruff>=0.15.7",
    "twine>=6.2.0",
]
